2011-06-15  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Dimitri Glazkov.

        Can't type text when input element is shrunken by a CSS rule
        https://bugs.webkit.org/show_bug.cgi?id=62550

        Added a regression test now that the bug no longer reproduces.

        * fast/forms/type-after-focus-rule-shrink-width-expected.txt: Added.
        * fast/forms/type-after-focus-rule-shrink-width.html: Added.

2011-06-15  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Serious performance regression during continuous focused element style updates
        https://bugs.webkit.org/show_bug.cgi?id=61038

        * inspector/elements/edit-dom-actions.html:
        * inspector/elements/set-attribute.html:
        * inspector/styles/styles-update-from-js-expected.txt:
        * inspector/styles/styles-update-from-js.html:

2011-06-15  Martin Robinson  <mrobinson@igalia.com>

        Reclassify a failing GTK+ test.

        * platform/gtk/Skipped: This test is actually failing because
        EventSender.mouseScrollBy is missing.

2011-06-15  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Alexey Proskuryakov.

        Textarea will not accept space characters at end of line
        https://bugs.webkit.org/show_bug.cgi?id=61483

        Added a regression test now that the bug has been resolved by r88883.

        * editing/input/insert-wrapping-space-in-textarea-expected.txt: Added.
        * editing/input/insert-wrapping-space-in-textarea.html: Added.

2011-06-15  Andrey Kosyakov  <caseq@chromium.org>

       Unreviewed, rolled out r88937 (broke build on mac)

        * http/tests/inspector/network/network-xhr-async-expected.txt: Removed.
        * http/tests/inspector/network/network-xhr-async.html: Removed.
        * http/tests/inspector/network/network-xhr-sync-expected.txt: Removed.
        * http/tests/inspector/network/network-xhr-sync.html: Removed.
